--- a/Road to Recovery/pages/index.html
+++ b/Road to Recovery/pages/index.html
@@ -169,7 +169,7 @@
                             <div class="card-box" style="width:100%; height:770px">
 
                                 <!-- Home Page Content -->
-                                <iframe style="width:100%; height:100%" src="https://app.powerbi.com/view?r=eyJrIjoiYWI4Y2YxODQtNGY1MS00N2E1LWFkYWItY2RhYzY3Y2Q5YTJhIiwidCI6IjUxNTdhOGVmLTQ5MTEtNGIzNy04YjI4LWEyNGVmOTk5Y2RlMCIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>
+                                <!--<iframe style="width:100%; height:100%" src="https://app.powerbi.com/view?r=eyJrIjoiYWI4Y2YxODQtNGY1MS00N2E1LWFkYWItY2RhYzY3Y2Q5YTJhIiwidCI6IjUxNTdhOGVmLTQ5MTEtNGIzNy04YjI4LWEyNGVmOTk5Y2RlMCIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>-->
                             </div>
                         </div>
                     </div>
